# durhack-deployer

./: .editorconfig  .env.template  .gitignore  Pipfile  README.md  alembic.ini  ecosystem.config.cjs  pyproject.toml  queue-workers.service  uwsgi.ini
alembic/: env.py
alembic/versions/: ac20ac7bcea6_create_event_table.py
config/: default.toml  deploy-event.durhack.com.toml  deploy.durhack.com.toml  production.toml
production-deployer/: .env.celery  .gitignore  .template.env  Pipfile  README.md  add-src-to-pythonpath.sh
production-deployer/config/: .gitignore  default.toml  production.toml
production-deployer/scripts/: main-worker.sh  reload-worker.sh  start-worker.sh  stop-worker.sh
production-deployer/src/: aio_watchdog.py  app.py  call_handle_event.py  config.py  data_types.py  event_queue_worker.py  github_meta.py  json_serialization.py  payload_signature_verifier.py  queue_worker_base.py  storage.py  worker.py
scripts/: activate-environment.sh  add-deployment-user.sh  create-migration.sh  create-webhook.sh  definitions.sh  delete-webhook.sh  deployment-user-self-setup.sh  gosmee-dev.sh  identify-webhook.sh  main-worker.sh  migrate.sh  ping-webhook.sh  project-dirname.sh  python-module.sh  test-push-webhook.sh  webhook-dev.sh  worker-dev.sh
scripts/utils/: hyperlink.sh
src/: aio_watchdog.py  config.py  definitions.py  deployments.py  filters.py  github_repository_queue_worker.py  json_serialization.py  queue_worker_base.py  queues.py  storage.py  test-child-logger.py
src/config_loader/: main.py  types.py
src/git/: diff.py  (+4 more)
tests/: filters.test.py
(+98 files in other folders)
